<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Location">
        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="@string/use_device_location_key"
            android:summary="@string/use_device_location_summary"
            android:title="@string/use_device_location_title" />
        <EditTextPreference
            android:defaultValue="@string/use_custom_location_default"
            android:dependency="@string/use_device_location_key"
            android:key="@string/use_custom_location_key"
            android:summary="@string/use_custom_location_summary"
            android:title="@string/use_custom_location_title" />
    </PreferenceCategory>
</PreferenceScreen>